--- a/css/index.css
+++ b/css/index.css
@@ -11,3 +11,19 @@ background-color: rgb(66, 59, 59);
     justify-content: center;
     align-items: center;
 }
+.boto1 {
+   list-style: none;
+   display: inline-block;
+   padding: 10px 20px;
+   font-size: 14px;
+   cursor: pointer;
+   text-align: center;
+   text-decoration: none;
+   outline: none;
+   color: rgb(225, 0, 0);
+   background-color: #ffffff;
+   border: none;
+   border-radius: 15px;
+
+   box-shadow: 0 9px #000000;
+}
