--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,7 @@ body {
 background-color: rgb(66, 59, 59);
 }
 .lista {
-    color: white;
+    color: red;
     font-size: 1.6em;
     font-weight: 900;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -21,21 +21,21 @@ h1 {
 
 
 .boto1 {
-   list-style: none;
-   display: inline-block;
-   padding: 10px 20px;
-   font-size: 14px;
-   cursor: pointer;
-   text-align: center;
-   text-decoration: none;
-   outline: none;
-   color: rgb(225, 0, 0);
-   background-color: #ffffff;
-   border: none;
-   border-radius: 15px;
+   list-style: none; /*Para quitar el boton de inicio en los link*/
+   display: inline-block; /*  */
+   padding: 10px 20px; /*  */
+   font-size: 14px; /*Se establece el tamaño de la fuente*/
+   cursor: pointer; /*  */
+   text-align: center; /*  */
+   text-decoration: none; /*  */
+   outline: none; /*  */
+   color: rgb(225, 0, 0); /* El puento del boton */
+   background-color: rgb(189, 183, 107); /*Color del fondo del boton*/
+   border: none; /*Se le hace un color de borde dependiendo de los siguientes datos, ej {2px solid red) se utilizaria sin las comillas*/
+   border-radius: 15px;/*Cambia las esquinas rodondeandolo*/
 
-   box-shadow: 0 9px #000000;
-   margin-right: 20px;
+   box-shadow: 0 9px #000000; /* Sombra del boton*/
+   margin-right: 20px; /*separar los botones*/
 }
 .fondo {
 background-image: url(../img/imagen.jpg);
