--- a/css/usuario.css
+++ b/css/usuario.css
@@ -6,3 +6,30 @@ background-color: rgb(211, 211, 211);
     font-family: 'Times New Roman', Times, serif;
 
 }
+.boto1 {
+    list-style: none; /*Para quitar el boton de inicio en los link*/
+    display: inline-block; /*  */
+    justify-content: center;
+    padding: 10px 20px; /*  */
+    font-size: 14px; /*Se establece el tamaño de la fuente*/
+    cursor: pointer; /*  */
+    text-align: center; /*  */
+    text-decoration: none; /*  */
+    outline: none; /*  */
+    color: rgb(225, 0, 0); /* El puento del boton */
+    background-color: rgb(135, 206, 250); /*Color del fondo del boton*/
+    border: none; /*Se le hace un color de borde dependiendo de los siguientes datos, ej {2px solid red) se utilizaria sin las comillas*/
+    border-radius: 15px;/*Cambia las esquinas rodondeandolo*/
+ 
+    box-shadow: 0 9px rgb(65, 105, 225); /* Sombra del boton*/
+    margin-right: 20px; /*separar los botones*/
+}
+.lista {
+    font-size: 1.6em;
+    font-weight: 900;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    display: flex;
+    margin: 50px;
+    justify-content: center;
+    align-items: center;
+}
