--- a/css/tarea.css
+++ b/css/tarea.css
@@ -1,32 +1,22 @@
 * {
     margin: 0; 
 }
-body {
-    background: linear-gradient(PapayaWhip,PaleGreen);
+/* body {
+    background: linear-gradient(Gold,Crimson);
     width: 100%;
-    height: 125vh; 
-}
+    height: 100vh;
+} */
 .fondo {
     background-image: url(../img/imagen.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-    margin-top: 20px;
+    margin-top: 10%;
 }
-h1 {
+h1, span {
     color: white;
     font-weight: 700;
     font-size: 2em;
-}
-.tamaño1 {
-    color: white;
-    font-weight: 700;
-    font-size: 2em;
-}
-.tamaño {
-    color: white;
-    font-weight: 700;
-    font-size: 1.5em;
 }
 .boto1 {
     list-style: none; /*Para quitar el boton de inicio en los link*/
@@ -46,7 +36,7 @@ h1 {
     box-shadow: 0 9px rgb(65, 105, 225); /* Sombra del boton*/
     margin-right: 20px; /*separar los botones*/
 }
-input {
+button {
     list-style: none; /*Para quitar el boton de inicio en los link*/
     display: inline-block; /*  */
     padding: 10px 20px; /* tamaño de la margen del boton */
@@ -83,23 +73,8 @@ h1 {
     display: flex;
     justify-content: center;
 }
-
-.lista1 {
-/* /*     list-style: none; /*Para quitar el boton de inicio en los link*/
-    display: inline-block; /*  */
-    padding: 10px 20px; /* tamaño de la margen del boton */
-    font-size: 14px; /*Se establece el tamaño de la fuente*/
-    cursor: pointer; /*  */
-    text-align: center; /*  */
-    text-decoration: none; /*  */
-    outline: none; /*  */
-    border: none; /*Se le hace un color de borde dependiendo de los siguientes datos, ej {2px solid red) se utilizaria sin las comillas*/
-    border-radius: 15px;/*Cambia las esquinas rodondeandolo*/
-    margin-right: 20px; /*separar los botones*/ 
+input {
+    align-items: center;
+    display: block;
+    justify-content: center; 
 }
-.total1{
-    display: inline-block;
-}
-
-
-
